scss/base.scss
$govuk-assets-path: "/static/assets/";
$moj-assets-path: "/static/assets/";
$fmj-images-path: "/static/assets/images";

// Removes need to put classes on all elements
$govuk-global-styles: true;

@import "node_modules/govuk-frontend/dist/govuk/all";
@import "node_modules/@ministryofjustice/frontend/moj/all";
@import "./components/search";
@import "./components/masthead";
@import "./glossary";
@import "./details";

.js-required {
  display: none;
}

mark {
  background-color: inherit;
  color: inherit;
  @include govuk-typography-weight-bold($important: false);
}

.extra-skip-link:active,
.extra-skip-link:focus {
  margin-bottom: govuk-spacing(3) !important;
}

.column-description {
  @include govuk-media-query($from: desktop) {
    max-width: calc($govuk-page-width / 2);
    overflow-wrap: break-word;
  }
}

.wide-table {
  table-layout: fixed;
  width: 100%;
  overflow-wrap: break-word;
}

code {
  font-family: monaco, Consolas, "Lucida Console", monospace;
  @include govuk-font-size($size: 16); /* Slightly smaller font size */
  background-color: govuk-colour("light-grey");
  border: 1px solid #ddd;
  border-radius: 2px; /* Rounded corners */
  padding: 1px 3px; /* Padding around the text */
  color: govuk-colour("black");
}

.main-wrapper-with-masthead {
  @extend .govuk-main-wrapper;
  padding-top: govuk-spacing(3);
}

